--- a/HW3_rh2684/HW3_ass_2.ipynb
+++ b/HW3_rh2684/HW3_ass_2.ipynb
@@ -60,7 +60,7 @@
    "source": [
     "### Idea: <i> Men are more likely to cycle long distances than women <i/>\n",
     "\n",
-    "### Null Hypothesis: <i>The ratio of women continuously cycling more than 30 minutes over the women that cycle less than 30 minutes is the same or lower than the ratio of men continuously cycling more than 30 minutes over the men cycling less than 30 minutes during weekdays.</i>"
+    "### Null Hypothesis: <i>The ratio of women continuously cycling more than 30 minutes over the women that cycle less than 30 minutes is the same or lower than the ratio of men continuously cycling more than 30 minutes over the men cycling less than 30 minutes.</i>"
    ]
   },
   {
