--- a/HW3_rh2684/HW3_ass_2.ipynb
+++ b/HW3_rh2684/HW3_ass_2.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "# Importing the libraries.\n",
     "\n",
-    "from __future__  import print_function, division\n",
+    "from __future__  import print_function, division # To make equations beautiful\n",
     "import statsmodels.formula.api as smf\n",
     "import pylab as pl\n",
     "import pandas as pd\n",
