--- a/HW8_rh2684/HW8_rh2684_assignment_1.ipynb
+++ b/HW8_rh2684/HW8_rh2684_assignment_1.ipynb
@@ -262,7 +262,7 @@
     "          text-align:justify; \n",
     "          padding:10px;\n",
     "          font-family:monospace;\">\n",
-    "**Figure 1**: The figure shows the NYC daily water consumption in millions of gallons according to the time period from 1979 to 2016.</p>"
+    "<b>Figure 1</b>: The figure shows the NYC daily water consumption in millions of gallons according to the time period from 1979 to 2016.</p>"
    ]
   },
   {
@@ -438,8 +438,17 @@
     "          text-align:justify; \n",
     "          padding:10px;\n",
     "          font-family:monospace;\">\n",
-    "**Figure 2**: The figure shows the prediction of NYC daily water consumption in millions of gallons based on the historical daily water consumption data for the period of 1979 to 2016. It is interesting that despite the total population increase of 17,3% for the mentioned period the daily water consumption was decreased by 34%! The regression line (R-squared = 0.88) fitted to the data predicts the trend of further consumption reduction.</p>"
+    "<b>Figure 2</b>: The figure shows the prediction of NYC daily water consumption in millions of gallons based on the historical daily water consumption data for the period of 1979 to 2016. It is interesting that despite the total population increase of 17,3% for the mentioned period the daily water consumption was decreased by 34%! The regression line (R-squared = 0.88) fitted to the data predicts the trend of further consumption reduction.</p>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
