--- a/HW11_rh2684/HW11_Assignment_2.ipynb
+++ b/HW11_rh2684/HW11_Assignment_2.ipynb
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2017-12-07T09:33:49.272932",
@@ -435,7 +435,7 @@
    "source": [
     "times = 0 \n",
     "\n",
-    "while(not (centers == newc).all()) or times < 10:\n",
+    "while(not (centers == newc).all()) or times < 20:\n",
     "    print(times)\n",
     "    centers = newc\n",
     "    values1.set_data(np.hstack([random_1[:, cl1], random_2[:, cl2]])[0],\n",
@@ -456,6 +456,15 @@
     "    times += 1\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
