--- a/HW11_rh2684/HW11_assignment_1.ipynb
+++ b/HW11_rh2684/HW11_assignment_1.ipynb
@@ -1544,31 +1544,310 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 247,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 3, 3, 1, 1, 1, 0, 1, 1, 1, 0, 0, 3, 0, 3, 0, 0, 0, 3, 0, 0, 0, 0,\n",
+       "       0, 0, 3, 0, 0, 3, 0, 0, 0, 0, 3, 0, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 3, 0, 1, 3, 0, 1, 1, 0, 0, 0, 0, 1, 0,\n",
+       "       3, 3, 3, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 0, 2, 3,\n",
+       "       0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 0, 1, 1, 0, 1,\n",
+       "       0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2,\n",
+       "       3, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2,\n",
+       "       3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 3, 0, 0, 0, 0, 0, 0, 2, 2, 3,\n",
+       "       3, 2, 3, 3, 0, 0, 0, 0, 0, 0, 3, 1, 0, 1, 0, 2, 3, 3])"
+      ]
+     },
+     "execution_count": 247,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res_Mix"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 274,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ZIPCODE</th>\n",
+       "      <th>1994</th>\n",
+       "      <th>1995</th>\n",
+       "      <th>1996</th>\n",
+       "      <th>1997</th>\n",
+       "      <th>1998</th>\n",
+       "      <th>1999</th>\n",
+       "      <th>2000</th>\n",
+       "      <th>2001</th>\n",
+       "      <th>2002</th>\n",
+       "      <th>...</th>\n",
+       "      <th>2006</th>\n",
+       "      <th>2007</th>\n",
+       "      <th>2008</th>\n",
+       "      <th>2009</th>\n",
+       "      <th>2010</th>\n",
+       "      <th>2011</th>\n",
+       "      <th>2012</th>\n",
+       "      <th>2013</th>\n",
+       "      <th>2014</th>\n",
+       "      <th>kmLabels</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11436</td>\n",
+       "      <td>439</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>11</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  ZIPCODE  1994  1995  1996  1997  1998  1999  2000  2001  2002    ...     \\\n",
+       "0   11436   439     2     4     4     3     2     1     6    11    ...      \n",
+       "\n",
+       "   2006  2007  2008  2009  2010  2011  2012  2013  2014  kmLabels  \n",
+       "0     8     5     3     2     2     2     2     2     4         2  \n",
+       "\n",
+       "[1 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 274,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "finalDf.loc[:0:]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# normalizing values\n",
+    "\n",
+    "normalizedDf = finalDf\n",
+    "normalizedDf = normalizedDf.drop('kmLabels', axis=1);"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# My fingers bleed writing this non-pythonic solution, but no time for loops now, sorry.\n",
+    "\n",
+    "normalizedDf[1994] = (normalizedDf[1994] - normalizedDf[1994].mean()) / normalizedDf[1994].std()\n",
+    "normalizedDf[1995] = (normalizedDf[1995] - normalizedDf[1995].mean()) / normalizedDf[1995].std()\n",
+    "normalizedDf[1996] = (normalizedDf[1996] - normalizedDf[1996].mean()) / normalizedDf[1996].std()\n",
+    "normalizedDf[1997] = (normalizedDf[1997] - normalizedDf[1997].mean()) / normalizedDf[1997].std()\n",
+    "normalizedDf[1998] = (normalizedDf[1998] - normalizedDf[1998].mean()) / normalizedDf[1998].std()\n",
+    "normalizedDf[1999] = (normalizedDf[1999] - normalizedDf[1999].mean()) / normalizedDf[1999].std()\n",
+    "normalizedDf[2000] = (normalizedDf[2000] - normalizedDf[2000].mean()) / normalizedDf[2000].std()\n",
+    "normalizedDf[2001] = (normalizedDf[2001] - normalizedDf[2001].mean()) / normalizedDf[2001].std()\n",
+    "normalizedDf[2002] = (normalizedDf[2002] - normalizedDf[2002].mean()) / normalizedDf[2002].std()\n",
+    "normalizedDf[2003] = (normalizedDf[2003] - normalizedDf[2003].mean()) / normalizedDf[2003].std()\n",
+    "normalizedDf[2004] = (normalizedDf[2004] - normalizedDf[2004].mean()) / normalizedDf[2004].std()\n",
+    "normalizedDf[2005] = (normalizedDf[2005] - normalizedDf[2005].mean()) / normalizedDf[2005].std()\n",
+    "normalizedDf[2006] = (normalizedDf[2006] - normalizedDf[2006].mean()) / normalizedDf[2006].std()\n",
+    "normalizedDf[2007] = (normalizedDf[2007] - normalizedDf[2007].mean()) / normalizedDf[2007].std()\n",
+    "normalizedDf[2008] = (normalizedDf[2008] - normalizedDf[2008].mean()) / normalizedDf[2008].std()\n",
+    "normalizedDf[2009] = (normalizedDf[2009] - normalizedDf[2009].mean()) / normalizedDf[2009].std()\n",
+    "normalizedDf[2010] = (normalizedDf[2010] - normalizedDf[2010].mean()) / normalizedDf[2010].std()\n",
+    "normalizedDf[2011] = (normalizedDf[2011] - normalizedDf[2011].mean()) / normalizedDf[2011].std()\n",
+    "normalizedDf[2012] = (normalizedDf[2012] - normalizedDf[2012].mean()) / normalizedDf[2012].std()\n",
+    "normalizedDf[2013] = (normalizedDf[2013] - normalizedDf[2013].mean()) / normalizedDf[2013].std()\n",
+    "normalizedDf[2014] = (normalizedDf[2014] - normalizedDf[2014].mean()) / normalizedDf[2014].std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 294,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ZIPCODE</th>\n",
+       "      <th>1994</th>\n",
+       "      <th>1995</th>\n",
+       "      <th>1996</th>\n",
+       "      <th>1997</th>\n",
+       "      <th>1998</th>\n",
+       "      <th>1999</th>\n",
+       "      <th>2000</th>\n",
+       "      <th>2001</th>\n",
+       "      <th>2002</th>\n",
+       "      <th>...</th>\n",
+       "      <th>2005</th>\n",
+       "      <th>2006</th>\n",
+       "      <th>2007</th>\n",
+       "      <th>2008</th>\n",
+       "      <th>2009</th>\n",
+       "      <th>2010</th>\n",
+       "      <th>2011</th>\n",
+       "      <th>2012</th>\n",
+       "      <th>2013</th>\n",
+       "      <th>2014</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11436</td>\n",
+       "      <td>1.179918</td>\n",
+       "      <td>-0.599034</td>\n",
+       "      <td>-0.603384</td>\n",
+       "      <td>-0.607043</td>\n",
+       "      <td>-0.652378</td>\n",
+       "      <td>-0.627804</td>\n",
+       "      <td>-0.651440</td>\n",
+       "      <td>-0.658323</td>\n",
+       "      <td>-0.621015</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.660545</td>\n",
+       "      <td>-0.638964</td>\n",
+       "      <td>-0.651255</td>\n",
+       "      <td>-0.678079</td>\n",
+       "      <td>-0.677578</td>\n",
+       "      <td>-0.684992</td>\n",
+       "      <td>-0.669707</td>\n",
+       "      <td>-0.674207</td>\n",
+       "      <td>-0.665816</td>\n",
+       "      <td>-0.660958</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11213</td>\n",
+       "      <td>1.224639</td>\n",
+       "      <td>-0.590668</td>\n",
+       "      <td>-0.573231</td>\n",
+       "      <td>-0.590069</td>\n",
+       "      <td>1.305240</td>\n",
+       "      <td>1.315786</td>\n",
+       "      <td>1.358627</td>\n",
+       "      <td>1.352974</td>\n",
+       "      <td>1.367546</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.482017</td>\n",
+       "      <td>1.520427</td>\n",
+       "      <td>1.452493</td>\n",
+       "      <td>1.308154</td>\n",
+       "      <td>1.322107</td>\n",
+       "      <td>1.392429</td>\n",
+       "      <td>1.258700</td>\n",
+       "      <td>1.321789</td>\n",
+       "      <td>1.285678</td>\n",
+       "      <td>1.355642</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11212</td>\n",
+       "      <td>-0.564189</td>\n",
+       "      <td>1.228796</td>\n",
+       "      <td>1.244545</td>\n",
+       "      <td>1.315317</td>\n",
+       "      <td>1.509436</td>\n",
+       "      <td>1.686192</td>\n",
+       "      <td>1.644612</td>\n",
+       "      <td>1.756064</td>\n",
+       "      <td>1.683059</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.820093</td>\n",
+       "      <td>1.835069</td>\n",
+       "      <td>1.845361</td>\n",
+       "      <td>1.756524</td>\n",
+       "      <td>1.817642</td>\n",
+       "      <td>1.960692</td>\n",
+       "      <td>1.800787</td>\n",
+       "      <td>1.848449</td>\n",
+       "      <td>1.879611</td>\n",
+       "      <td>1.808711</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  ZIPCODE      1994      1995      1996      1997      1998      1999  \\\n",
+       "0   11436  1.179918 -0.599034 -0.603384 -0.607043 -0.652378 -0.627804   \n",
+       "1   11213  1.224639 -0.590668 -0.573231 -0.590069  1.305240  1.315786   \n",
+       "2   11212 -0.564189  1.228796  1.244545  1.315317  1.509436  1.686192   \n",
+       "\n",
+       "       2000      2001      2002    ...         2005      2006      2007  \\\n",
+       "0 -0.651440 -0.658323 -0.621015    ...    -0.660545 -0.638964 -0.651255   \n",
+       "1  1.358627  1.352974  1.367546    ...     1.482017  1.520427  1.452493   \n",
+       "2  1.644612  1.756064  1.683059    ...     1.820093  1.835069  1.845361   \n",
+       "\n",
+       "       2008      2009      2010      2011      2012      2013      2014  \n",
+       "0 -0.678079 -0.677578 -0.684992 -0.669707 -0.674207 -0.665816 -0.660958  \n",
+       "1  1.308154  1.322107  1.392429  1.258700  1.321789  1.285678  1.355642  \n",
+       "2  1.756524  1.817642  1.960692  1.800787  1.848449  1.879611  1.808711  \n",
+       "\n",
+       "[3 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 294,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalizedDf.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Time's up on this! Basically, the only thing left is the visualization. "
+   ]
   }
  ],
  "metadata": {
