--- a/HW11_rh2684/HW11_assignment_1.ipynb
+++ b/HW11_rh2684/HW11_assignment_1.ipynb
@@ -1671,38 +1671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# My fingers bleed writing this non-pythonic solution, but no time for loops now, sorry.\n",
-    "\n",
-    "normalizedDf[1994] = (normalizedDf[1994] - normalizedDf[1994].mean()) / normalizedDf[1994].std()\n",
-    "normalizedDf[1995] = (normalizedDf[1995] - normalizedDf[1995].mean()) / normalizedDf[1995].std()\n",
-    "normalizedDf[1996] = (normalizedDf[1996] - normalizedDf[1996].mean()) / normalizedDf[1996].std()\n",
-    "normalizedDf[1997] = (normalizedDf[1997] - normalizedDf[1997].mean()) / normalizedDf[1997].std()\n",
-    "normalizedDf[1998] = (normalizedDf[1998] - normalizedDf[1998].mean()) / normalizedDf[1998].std()\n",
-    "normalizedDf[1999] = (normalizedDf[1999] - normalizedDf[1999].mean()) / normalizedDf[1999].std()\n",
-    "normalizedDf[2000] = (normalizedDf[2000] - normalizedDf[2000].mean()) / normalizedDf[2000].std()\n",
-    "normalizedDf[2001] = (normalizedDf[2001] - normalizedDf[2001].mean()) / normalizedDf[2001].std()\n",
-    "normalizedDf[2002] = (normalizedDf[2002] - normalizedDf[2002].mean()) / normalizedDf[2002].std()\n",
-    "normalizedDf[2003] = (normalizedDf[2003] - normalizedDf[2003].mean()) / normalizedDf[2003].std()\n",
-    "normalizedDf[2004] = (normalizedDf[2004] - normalizedDf[2004].mean()) / normalizedDf[2004].std()\n",
-    "normalizedDf[2005] = (normalizedDf[2005] - normalizedDf[2005].mean()) / normalizedDf[2005].std()\n",
-    "normalizedDf[2006] = (normalizedDf[2006] - normalizedDf[2006].mean()) / normalizedDf[2006].std()\n",
-    "normalizedDf[2007] = (normalizedDf[2007] - normalizedDf[2007].mean()) / normalizedDf[2007].std()\n",
-    "normalizedDf[2008] = (normalizedDf[2008] - normalizedDf[2008].mean()) / normalizedDf[2008].std()\n",
-    "normalizedDf[2009] = (normalizedDf[2009] - normalizedDf[2009].mean()) / normalizedDf[2009].std()\n",
-    "normalizedDf[2010] = (normalizedDf[2010] - normalizedDf[2010].mean()) / normalizedDf[2010].std()\n",
-    "normalizedDf[2011] = (normalizedDf[2011] - normalizedDf[2011].mean()) / normalizedDf[2011].std()\n",
-    "normalizedDf[2012] = (normalizedDf[2012] - normalizedDf[2012].mean()) / normalizedDf[2012].std()\n",
-    "normalizedDf[2013] = (normalizedDf[2013] - normalizedDf[2013].mean()) / normalizedDf[2013].std()\n",
-    "normalizedDf[2014] = (normalizedDf[2014] - normalizedDf[2014].mean()) / normalizedDf[2014].std()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
@@ -1713,7 +1682,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ZIPCODE</th>\n",
        "      <th>1994</th>\n",
        "      <th>1995</th>\n",
        "      <th>1996</th>\n",
@@ -1723,6 +1691,7 @@
        "      <th>2000</th>\n",
        "      <th>2001</th>\n",
        "      <th>2002</th>\n",
+       "      <th>2003</th>\n",
        "      <th>...</th>\n",
        "      <th>2005</th>\n",
        "      <th>2006</th>\n",
@@ -1739,107 +1708,165 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>11436</td>\n",
-       "      <td>1.179918</td>\n",
-       "      <td>-0.599034</td>\n",
-       "      <td>-0.603384</td>\n",
-       "      <td>-0.607043</td>\n",
-       "      <td>-0.652378</td>\n",
-       "      <td>-0.627804</td>\n",
-       "      <td>-0.651440</td>\n",
-       "      <td>-0.658323</td>\n",
-       "      <td>-0.621015</td>\n",
+       "      <td>4.355902</td>\n",
+       "      <td>-0.093460</td>\n",
+       "      <td>-0.104341</td>\n",
+       "      <td>-0.113494</td>\n",
+       "      <td>-0.226882</td>\n",
+       "      <td>-0.165417</td>\n",
+       "      <td>-0.224534</td>\n",
+       "      <td>-0.241750</td>\n",
+       "      <td>-0.148439</td>\n",
+       "      <td>-0.213609</td>\n",
        "      <td>...</td>\n",
-       "      <td>-0.660545</td>\n",
-       "      <td>-0.638964</td>\n",
-       "      <td>-0.651255</td>\n",
-       "      <td>-0.678079</td>\n",
-       "      <td>-0.677578</td>\n",
-       "      <td>-0.684992</td>\n",
-       "      <td>-0.669707</td>\n",
-       "      <td>-0.674207</td>\n",
-       "      <td>-0.665816</td>\n",
-       "      <td>-0.660958</td>\n",
+       "      <td>-0.247307</td>\n",
+       "      <td>-0.193331</td>\n",
+       "      <td>-0.224072</td>\n",
+       "      <td>-0.291162</td>\n",
+       "      <td>-0.289908</td>\n",
+       "      <td>-0.308453</td>\n",
+       "      <td>-0.270224</td>\n",
+       "      <td>-0.281478</td>\n",
+       "      <td>-0.260490</td>\n",
+       "      <td>-0.248341</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>11213</td>\n",
-       "      <td>1.224639</td>\n",
-       "      <td>-0.590668</td>\n",
-       "      <td>-0.573231</td>\n",
-       "      <td>-0.590069</td>\n",
-       "      <td>1.305240</td>\n",
-       "      <td>1.315786</td>\n",
-       "      <td>1.358627</td>\n",
-       "      <td>1.352974</td>\n",
-       "      <td>1.367546</td>\n",
+       "      <td>0.201419</td>\n",
+       "      <td>-2.385859</td>\n",
+       "      <td>-2.361007</td>\n",
+       "      <td>-2.385005</td>\n",
+       "      <td>0.316296</td>\n",
+       "      <td>0.331327</td>\n",
+       "      <td>0.392386</td>\n",
+       "      <td>0.384329</td>\n",
+       "      <td>0.405098</td>\n",
+       "      <td>0.490674</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.482017</td>\n",
-       "      <td>1.520427</td>\n",
-       "      <td>1.452493</td>\n",
-       "      <td>1.308154</td>\n",
-       "      <td>1.322107</td>\n",
-       "      <td>1.392429</td>\n",
-       "      <td>1.258700</td>\n",
-       "      <td>1.321789</td>\n",
-       "      <td>1.285678</td>\n",
-       "      <td>1.355642</td>\n",
+       "      <td>0.568248</td>\n",
+       "      <td>0.622992</td>\n",
+       "      <td>0.526169</td>\n",
+       "      <td>0.320450</td>\n",
+       "      <td>0.340335</td>\n",
+       "      <td>0.440562</td>\n",
+       "      <td>0.249965</td>\n",
+       "      <td>0.339882</td>\n",
+       "      <td>0.288415</td>\n",
+       "      <td>0.388132</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>11212</td>\n",
-       "      <td>-0.564189</td>\n",
-       "      <td>1.228796</td>\n",
-       "      <td>1.244545</td>\n",
-       "      <td>1.315317</td>\n",
-       "      <td>1.509436</td>\n",
-       "      <td>1.686192</td>\n",
-       "      <td>1.644612</td>\n",
-       "      <td>1.756064</td>\n",
-       "      <td>1.683059</td>\n",
+       "      <td>-4.027386</td>\n",
+       "      <td>-0.679854</td>\n",
+       "      <td>-0.650451</td>\n",
+       "      <td>-0.518318</td>\n",
+       "      <td>-0.155896</td>\n",
+       "      <td>0.174110</td>\n",
+       "      <td>0.096480</td>\n",
+       "      <td>0.304563</td>\n",
+       "      <td>0.168260</td>\n",
+       "      <td>0.321309</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.820093</td>\n",
-       "      <td>1.835069</td>\n",
-       "      <td>1.845361</td>\n",
-       "      <td>1.756524</td>\n",
-       "      <td>1.817642</td>\n",
-       "      <td>1.960692</td>\n",
-       "      <td>1.800787</td>\n",
-       "      <td>1.848449</td>\n",
-       "      <td>1.879611</td>\n",
-       "      <td>1.808711</td>\n",
+       "      <td>0.424106</td>\n",
+       "      <td>0.452065</td>\n",
+       "      <td>0.471282</td>\n",
+       "      <td>0.305420</td>\n",
+       "      <td>0.419530</td>\n",
+       "      <td>0.686606</td>\n",
+       "      <td>0.388061</td>\n",
+       "      <td>0.477046</td>\n",
+       "      <td>0.535226</td>\n",
+       "      <td>0.402855</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.144093</td>\n",
+       "      <td>2.255946</td>\n",
+       "      <td>2.434945</td>\n",
+       "      <td>2.463099</td>\n",
+       "      <td>-0.402941</td>\n",
+       "      <td>-0.373582</td>\n",
+       "      <td>-0.401393</td>\n",
+       "      <td>-0.437974</td>\n",
+       "      <td>-0.404115</td>\n",
+       "      <td>-0.411164</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.423040</td>\n",
+       "      <td>-0.427730</td>\n",
+       "      <td>-0.404629</td>\n",
+       "      <td>-0.424580</td>\n",
+       "      <td>-0.420174</td>\n",
+       "      <td>-0.425081</td>\n",
+       "      <td>-0.408331</td>\n",
+       "      <td>-0.420841</td>\n",
+       "      <td>-0.408688</td>\n",
+       "      <td>-0.396426</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3.724889</td>\n",
+       "      <td>-0.208277</td>\n",
+       "      <td>-0.197043</td>\n",
+       "      <td>-0.147078</td>\n",
+       "      <td>0.232171</td>\n",
+       "      <td>0.674219</td>\n",
+       "      <td>1.038929</td>\n",
+       "      <td>0.215544</td>\n",
+       "      <td>-0.274370</td>\n",
+       "      <td>-0.480575</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.115773</td>\n",
+       "      <td>0.043531</td>\n",
+       "      <td>-0.470486</td>\n",
+       "      <td>-0.791648</td>\n",
+       "      <td>-0.699884</td>\n",
+       "      <td>-0.571569</td>\n",
+       "      <td>-0.544292</td>\n",
+       "      <td>-0.756680</td>\n",
+       "      <td>-0.651512</td>\n",
+       "      <td>-0.859301</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3 rows × 22 columns</p>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  ZIPCODE      1994      1995      1996      1997      1998      1999  \\\n",
-       "0   11436  1.179918 -0.599034 -0.603384 -0.607043 -0.652378 -0.627804   \n",
-       "1   11213  1.224639 -0.590668 -0.573231 -0.590069  1.305240  1.315786   \n",
-       "2   11212 -0.564189  1.228796  1.244545  1.315317  1.509436  1.686192   \n",
+       "       1994      1995      1996      1997      1998      1999      2000  \\\n",
+       "0  4.355902 -0.093460 -0.104341 -0.113494 -0.226882 -0.165417 -0.224534   \n",
+       "1  0.201419 -2.385859 -2.361007 -2.385005  0.316296  0.331327  0.392386   \n",
+       "2 -4.027386 -0.679854 -0.650451 -0.518318 -0.155896  0.174110  0.096480   \n",
+       "3 -0.144093  2.255946  2.434945  2.463099 -0.402941 -0.373582 -0.401393   \n",
+       "4  3.724889 -0.208277 -0.197043 -0.147078  0.232171  0.674219  1.038929   \n",
        "\n",
-       "       2000      2001      2002    ...         2005      2006      2007  \\\n",
-       "0 -0.651440 -0.658323 -0.621015    ...    -0.660545 -0.638964 -0.651255   \n",
-       "1  1.358627  1.352974  1.367546    ...     1.482017  1.520427  1.452493   \n",
-       "2  1.644612  1.756064  1.683059    ...     1.820093  1.835069  1.845361   \n",
+       "       2001      2002      2003    ...         2005      2006      2007  \\\n",
+       "0 -0.241750 -0.148439 -0.213609    ...    -0.247307 -0.193331 -0.224072   \n",
+       "1  0.384329  0.405098  0.490674    ...     0.568248  0.622992  0.526169   \n",
+       "2  0.304563  0.168260  0.321309    ...     0.424106  0.452065  0.471282   \n",
+       "3 -0.437974 -0.404115 -0.411164    ...    -0.423040 -0.427730 -0.404629   \n",
+       "4  0.215544 -0.274370 -0.480575    ...     0.115773  0.043531 -0.470486   \n",
        "\n",
        "       2008      2009      2010      2011      2012      2013      2014  \n",
-       "0 -0.678079 -0.677578 -0.684992 -0.669707 -0.674207 -0.665816 -0.660958  \n",
-       "1  1.308154  1.322107  1.392429  1.258700  1.321789  1.285678  1.355642  \n",
-       "2  1.756524  1.817642  1.960692  1.800787  1.848449  1.879611  1.808711  \n",
+       "0 -0.291162 -0.289908 -0.308453 -0.270224 -0.281478 -0.260490 -0.248341  \n",
+       "1  0.320450  0.340335  0.440562  0.249965  0.339882  0.288415  0.388132  \n",
+       "2  0.305420  0.419530  0.686606  0.388061  0.477046  0.535226  0.402855  \n",
+       "3 -0.424580 -0.420174 -0.425081 -0.408331 -0.420841 -0.408688 -0.396426  \n",
+       "4 -0.791648 -0.699884 -0.571569 -0.544292 -0.756680 -0.651512 -0.859301  \n",
        "\n",
-       "[3 rows x 22 columns]"
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 294,
+     "execution_count": 315,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "normalizedDf.head(3)"
+    "rows = normalizedDf.index.tolist()\n",
+    "\n",
+    "for i in rows:\n",
+    "    normalizedDf.loc[i] = (normalizedDf.loc[i] - normalizedDf.loc[i].mean()) / normalizedDf.loc[i].std()\n",
+    "normalizedDf.head()"
    ]
   },
   {
